<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dip"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_profile"
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:background="@drawable/home_select_list_style"
        android:clickable="true" >

        <ImageView
            android:id="@+id/home_img_profile"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/index_show" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/home_img_profile"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_profile_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_profile_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip" />
        </LinearLayout>

        <ImageView
            android:layout_width="6dip"
            android:layout_height="12dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:src="@drawable/home_index_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_pinche"
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:background="@drawable/home_select_list_style"
        android:clickable="true" >

        <ImageView
            android:id="@+id/home_img_pinche"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/index_looks" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/home_img_pinche"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_pinche_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_pinche_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip" />
        </LinearLayout>

        <ImageView
            android:layout_width="6dip"
            android:layout_height="12dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:src="@drawable/home_index_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_gis"
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:background="@drawable/home_select_list_style"
        android:clickable="true" >

        <ImageView
            android:id="@+id/home_img_gis"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/index_shopping" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/home_img_gis"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_gis_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_gis_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip" />
        </LinearLayout>

        <ImageView
            android:layout_width="6dip"
            android:layout_height="12dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:src="@drawable/home_index_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_osn"
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:background="@drawable/home_select_list_style"
        android:clickable="true" >

        <ImageView
            android:id="@+id/home_img_osn"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/index_search" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/home_img_osn"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_osn_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_osn_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip" />
        </LinearLayout>

        <ImageView
            android:layout_width="6dip"
            android:layout_height="12dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:src="@drawable/home_index_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_logout"
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:background="@drawable/home_select_list_style"
        android:clickable="true" >

        <ImageView
            android:id="@+id/home_img_logout"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/index_browse" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/home_img_logout"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_logout_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_logout_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip" />
        </LinearLayout>

        <ImageView
            android:layout_width="6dip"
            android:layout_height="12dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:src="@drawable/home_index_arrow" />
    </RelativeLayout>

</LinearLayout>