<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/home_user_info_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip" >

        <ImageView
            android:id="@+id/home_headpic_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_action_user"
            android:contentDescription="@string/headPic" />

        <RelativeLayout
            android:id="@+id/home_personal_info_rl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip" >
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/home_personal_info_rl_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/home_textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip"
                android:layout_marginTop="2dip"
                android:text="@string/home_welcome"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/home_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip"
                android:layout_marginTop="2dip"
                android:text="User One." />

            <TextView
                android:id="@+id/home_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip"
                android:layout_marginTop="2dip"
                android:text="@string/home_help"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/home_select_list_layout_2" />
    </LinearLayout>

</LinearLayout>