<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dip"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/sinaweibo"
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:background="@drawable/home_select_list_style"
        android:clickable="true" >

        <ImageView
            android:id="@+id/home_img_looks"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/index_looks" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/home_img_looks"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_sinaweibo_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_sinaweibo_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip" />
        </LinearLayout>

        <ImageView
            android:layout_width="6dip"
            android:layout_height="12dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:src="@drawable/home_index_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/renren"
        android:layout_width="match_parent"
        android:layout_height="61dip"
        android:background="@drawable/home_select_list_style"
        android:clickable="true" >

        <ImageView
            android:id="@+id/home_img_shopping"
            android:layout_width="31dip"
            android:layout_height="31dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/index_shopping" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/home_img_shopping"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_renren_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_renren_info_tv"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14dip" />
        </LinearLayout>

        <ImageView
            android:layout_width="6dip"
            android:layout_height="12dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:src="@drawable/home_index_arrow" />
    </RelativeLayout>

</LinearLayout>